--- a/vignettes/section/irace-options.Rnw
+++ b/vignettes/section/irace-options.Rnw
@@ -195,7 +195,7 @@ The list of instances in \parameter{trainInstancesFile} is interpreted as file-s
  The maximum number of runs (invocations of \parameter{targetRunner}) that will be performed. It determines the maximum budget of experiments for the tuning. See \autoref{sec:budget}.
 
  \defparameter{minExperiments}{min-experiments}{}%
- The minimum number of runs (invocations of \parameter{targetRunner}) that will be performed. If this option is set, then \parameter{maxExperiments} is ignored and the actual budget will depend on the number of parameters and \parameter{minSurvival}, but it will not be smaller than this value. See \autoref{sec:budget}.
+ The minimum number of runs (invocations of \parameter{targetRunner}) that will be performed. If this option is set, then \parameter{maxExperiments} is ignored and the actual budget will depend on the number of parameters and \parameter{minNbSurvival}, but it will not be smaller than this value. See \autoref{sec:budget}.
 
  \defparameter{maxTime}{max-time}{0}%
  The maximum total time for the runs of \parameter{targetRunner} that will be  performed. The mean execution time  of each run is estimated in order to calculate the maximum number of experiments (see option \parameter{budgetEstimation}).
